namespaces/live.cloud-platform.service.justice.gov.uk/hmpps-incentives-dev/00-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hmpps-incentives-dev
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/slack-channel: "incentives-dev"
    cloud-platform.justice.gov.uk/slack-alert-channel: "incentives-dev"
    cloud-platform.justice.gov.uk/application: "HMPPS Incentives Apps"
    cloud-platform.justice.gov.uk/owner: "HMPPS Incentives: incentives-team@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/hmpps-incentives-ui.git"
    cloud-platform.justice.gov.uk/team-name: "manage-safety"
